# avr-rust-template

./: Cargo.toml  avr-atmega328p.json  cargo-build.sh  dis-asm.sh  flash.sh  init.sh  mkhex.sh
.cargo/: config.toml
misc/: avr-atmega328p-1.json  avr-atmega328p-10.json  avr-atmega328p-11.json  avr-atmega328p-2.json  avr-atmega328p-3.json  avr-atmega328p-5.json  avr-atmega328p-7.json  avr-rust-study-01-hello-nop1.rs  avr-rust-study-01-nop.rs  avr-rust-study-02-function.rs  avr-rust-study-03-flow-control.rs  avr-rust-study-04-bitvec.rs  avr-rust-study-05-bit-manipulate.rs  avr-scratch-00.rs  avr-unknown-gnu-atmega328.json  bit.rs  creativcoder_rust-arduino-blink.rs  dot.gitignore.template  gpio.rs  main.rs  main3.rs  reg.rs  spi_flash.rs  target-spec-json_x86_64-unknown-linux-gnu.json  temp_sensor.rs  try01.rs  try02-baremetal-io.rs  try03.rs  try04.rs  try05.rs  try07.rs  try08.rs  try09-rustc-cmd-version.rs  try10-register-model.rs  try11-block-delay.rs  try12-register.rs
src/: main.rs
tools/: cargo-build.sh  clean-target-elf-hex.sh  disasm-avr-objdump-dzrwx-elf-debug.sh  disasm-avr-objdump-dzrwx-elf-release.sh  flash-nano-iteaduino.sh  init.sh  interrupt_vector_reset.S  linker-script  make-hex.sh  vavrdisasm-t-ihex-c-m328p-debug.sh  vavrdisasm-t-ihex-c-m328p-release.sh  vavrdisasm_macos_bigsur
