[package]
name = "avr-template-bin"
version = "0.0.1"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]


# ---- profile ----
# copy from avr-hal
[profile.dev] 
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
debug = true

# ---- works but need check in future ----
# [profile.dev] panic = "abort"
# debug = true
# debug-assertions = false
# overflow-checks = false
# lto = false
# opt-level = "s"
# codegen-units = 1
#
# [profile.release]
# panic = "abort"
# debug = true
# #debug-assertions = false
# #overflow-checks = false
# lto = true
# opt-level = "s"
# codegen-units = 1
